# omnirobot_HighLevel

./: .gitattributes  .gitignore  README.md
config/: omni.env.example  robot.yaml
docs/: architecture.md  can-protocol.md  hardware.md  odometry.md  recovery.md  slam.md  tf-luna.md  ui.md
install/: apt-packages.txt  build-workspace.sh  configure-pi-hardware.sh  fetch-ros-deps.sh  install-services.sh  install-udev-rules.sh  install.sh  requirements-venv.txt  verify-install.sh
inventory/: apt-manual-packages.txt  can0-link.txt  ip-addr.txt  lsusb.txt  python-venv-ros-freeze.txt  ros-jazzy-packages.txt  ros2-nodes.txt  uname.txt
launch/: omni_robot.launch.py
maps/: README.md
scripts/: capture-inventory.sh  smoke-test-can.sh
services/: omni-bridge.service  omni-can.service  omni-lidar.service  omni-mux.service  omni-odom.service  omni-slam.service  omni-tfluna.service  teleop-web.service
src/ros2_ws/src/omni_bridge/: package.xml  setup.cfg  setup.py
src/ros2_ws/src/omni_bridge/config/: omni_bridge.params.yaml
src/ros2_ws/src/omni_bridge/launch/: omni_bridge.launch.py
src/ros2_ws/src/omni_bridge/omni_bridge/: can_bridge_node.py  tf_luna_node.py  wheel_odometry_node.py
teleop_web/: app.py
tools/: check_motion_directions.py  cmd_mux_node.py  diagnose_wheel_signature.py  load_map.sh  monitor.py  omni_env.sh  reset_slam.sh  run_cmd_mux.sh  run_lidar.sh  run_odometry.sh  run_robot_stack.sh  run_ros2_bridge.sh  run_slam.sh  run_teleop_web.sh  run_tf_luna.sh  save_map.sh  send_cmd.py  send_motion.py  send_ping.py  send_stop.py  start_new_map.sh
(+9 files in other folders)
