<?xml version="1.0"?>
<package format="3">
  <name>omni_bridge</name>
  <version>0.0.1</version>
  <description>ROS2 CAN bridge for STM32 omni robot controller</description>

  <maintainer email="noob@localhost">noob</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
